--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 // Массив файлов моделей, если нет модели будет добавлена пустая строка
                 const modelFiles = ["" ,"" ,""];
                 // Массив файлов изображений, если нет изображения будет добавлена пустая строка
-                const imageFiles = ["маркер 1.jpg" ,"Leibniz.jpg" ,"stepped reckoner.jpg"];
+                const imageFiles = ["маркер 1.jpg" ,"Leibniz.jpg" ,"stepped reckoner.png"];
                 // Массив файлов видео, если нет видео будет добавлена пустая строка
                 const videoFiles = ["" ,"" ,""];
                 // Массив файлов аудио, если нет аудио будет добавлена пустая строка
